--- a/Acme.RemoteFlights.Api/Views/Home/Index.cshtml
+++ b/Acme.RemoteFlights.Api/Views/Home/Index.cshtml
@@ -17,14 +17,14 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin="anonymous"></script>
-    <title>Index</title>
+    <title>Acme remote flights</title>
     <style>
     </style>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
     <div class="header">
-        <h1>Acme Remote Flight </h1>
+        @*<h1>Acme Remote Flight </h1>*@
     </div>
 
     <div id="root"></div>
