--- a/Acme.RemoteFlights.Api/Views/Home/Index.cshtml
+++ b/Acme.RemoteFlights.Api/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = null;
 }
@@ -24,15 +24,11 @@
 </head>
 <body>
     <div class="header">
-        @*<h1>Acme Remote Flight </h1>*@
+        <h1>Acme Remote Flight </h1>
     </div>
 
     <div id="root"></div>
     <script src="~/js/bundle.js" asp-append-version="true"></script>
-
-    @*<div class="footer">
-        <p>Resize the browser window to see how the content respond to the resizing.</p>
-    </div>*@
 
 </body>
 </html>
